Fixing the navigation jumping issue

--- a/css/customize.css
+++ b/css/customize.css
@@ -97,6 +97,7 @@ html, body, #__nuxt {
   gap: 0;
   width: 100%;
   max-width: 1600px;
+  min-height: 918.05px;
 }
 
 .sidebar-nav {
